Geometry Nodes: set handle position node crashed in lastest 3.1 alpha version #94166

Closed
opened 2021-12-16 19:48:30 +01:00 by kimhyunbin · 10 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 SUPER

Blender Version
Broken: version: 3.1.0, branch: alpha, commit date: 2021-12-16 00:05, hash: b265b447b639
Caused by 8e2c9f2dd3

Short description of error
I just update blender and using set handle position node and blender crashed
crashhandlepos.gif

Exact steps for others to reproduce the error

  • Open .blend fie
  • Drop Set Handle Positions in nodetree

Test File
#94166.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660 SUPER **Blender Version** Broken: version: 3.1.0, branch: alpha, commit date: 2021-12-16 00:05, hash: `b265b447b639` Caused by 8e2c9f2dd3 **Short description of error** I just update blender and using set handle position node and blender crashed ![crashhandlepos.gif](https://archive.blender.org/developer/F12754356/crashhandlepos.gif) **Exact steps for others to reproduce the error** - Open .blend fie - Drop `Set Handle Positions` in nodetree Test File [#94166.blend](https://archive.blender.org/developer/F12757027/T94166.blend)
Author

Added subscriber: @HyunBinKim

Added subscriber: @HyunBinKim
kimhyunbin changed title from set handle position node crashed in lastest 3.1 alpha version to Geometry Nodes: set handle position node crashed in lastest 3.1 alpha version 2021-12-16 19:49:34 +01:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Hmm, I can't reproduce this. I wonder if anyone else can.

Hmm, I can't reproduce this. I wonder if anyone else can.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, Thanks for the report. Can reproduce from scratch (tested on: 1f50c2876ed81e395f5bd300894e8caba0b0e3dc)

Broken between b647509913 - 644eb68524 (Bisecting now)

blender.exe         :0x00007FF65283E6C0  Spline::type C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\spline_base.cc:41
blender.exe         :0x00007FF6527E10D0  blender::bke::VArrayImpl_For_BezierHandles::get C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\geometry_component_curve.cc:878
blender.exe         :0x00007FF653185BB0  blender::fn::indices_from_selection C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\functions\intern\field.cc:644
blender.exe         :0x00007FF653185650  blender::fn::FieldEvaluator::get_evaluated_as_mask C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\functions\intern\field.cc:735
blender.exe         :0x00007FF652CE7DA0  blender::nodes::node_geo_set_curve_handles_cc::set_position_in_component C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\nodes\geometry\nodes\node_geo_set_curve_handles.cc:71
blender.exe         :0x00007FF652CE3730  blender::FunctionRef<void __cdecl(GeometrySet &)>::callback_fn<<lambda_3068ffea611ecfe44bb2261d7dac C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:107
blender.exe         :0x00007FF65273B8C0  GeometrySet::modify_geometry_sets C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\geometry_set.cc:562
blender.exe         :0x00007FF652CE6280  blender::nodes::node_geo_set_curve_handles_cc::node_geo_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\nodes\geometry\nodes\node_geo_set_curve_handles.cc:154
blender.exe         :0x00007FF652AA54D0  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:938
blender.exe         :0x00007FF652AA7E00  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::run_node_from_task_pool C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:734
blender.exe         :0x00007FF6532CF3F0  BLI_task_pool_push C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:485
blender.exe         :0x00007FF652AA0F00  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::with_locked_node<<lambda_531922ecfeaca7 C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1711
blender.exe         :0x00007FF652AA1270  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::with_locked_node<<lambda_97e59d60c46e6e C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1705
blender.exe         :0x00007FF652AA7FE0  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::schedule_initial_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:669
blender.exe         :0x00007FF652AA3EA0  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:474
blender.exe         :0x00007FF652AA3D10  blender::modifiers::geometry_nodes::evaluate_geometry_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1924
blender.exe         :0x00007FF652A63480  compute_geometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1042
blender.exe         :0x00007FF652A65E30  modifyGeometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1150
blender.exe         :0x00007FF652779B50  modifier_modify_mesh_and_geometry_set C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:893
blender.exe         :0x00007FF6527788A0  mesh_calc_modifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1224
blender.exe         :0x00007FF6527785A0  mesh_build_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1866
blender.exe         :0x00007FF65277AB80  makeDerivedMesh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1996
blender.exe         :0x00007FF65279A6B0  BKE_object_handle_data_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:196
blender.exe         :0x00007FF65279A440  BKE_object_eval_uber_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:393
blender.exe         :0x00007FF652990EF0  blender::deg::`anonymous namespace'::evaluate_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:120
blender.exe         :0x00007FF652990EA0  blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:132
blender.exe         :0x00007FF6532CF510  BLI_task_pool_work_and_wait C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:500
blender.exe         :0x00007FF652990A20  blender::deg::deg_evaluate_on_refresh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:401
blender.exe         :0x00007FF65265C920  scene_graph_update_tagged C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.c:2584
blender.exe         :0x00007FF65258FD90  wm_event_do_notifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:616
blender.exe         :0x00007FF6525797E0  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:645
blender.exe         :0x00007FF652574FD0  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:566
blender.exe         :0x00007FF6533913B8  __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFBD7637020  BaseThreadInitThunk
ntdll.dll           :0x00007FFBD9622630  RtlUserThreadStart```
Hi, Thanks for the report. Can reproduce from scratch (tested on: `1f50c2876ed81e395f5bd300894e8caba0b0e3dc`) Broken between `b647509913` - `644eb68524` (Bisecting now) ```lines blender.exe :0x00007FF65283E6C0 Spline::type C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\spline_base.cc:41 blender.exe :0x00007FF6527E10D0 blender::bke::VArrayImpl_For_BezierHandles::get C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\geometry_component_curve.cc:878 blender.exe :0x00007FF653185BB0 blender::fn::indices_from_selection C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\functions\intern\field.cc:644 blender.exe :0x00007FF653185650 blender::fn::FieldEvaluator::get_evaluated_as_mask C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\functions\intern\field.cc:735 blender.exe :0x00007FF652CE7DA0 blender::nodes::node_geo_set_curve_handles_cc::set_position_in_component C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\nodes\geometry\nodes\node_geo_set_curve_handles.cc:71 blender.exe :0x00007FF652CE3730 blender::FunctionRef<void __cdecl(GeometrySet &)>::callback_fn<<lambda_3068ffea611ecfe44bb2261d7dac C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:107 blender.exe :0x00007FF65273B8C0 GeometrySet::modify_geometry_sets C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\geometry_set.cc:562 blender.exe :0x00007FF652CE6280 blender::nodes::node_geo_set_curve_handles_cc::node_geo_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\nodes\geometry\nodes\node_geo_set_curve_handles.cc:154 blender.exe :0x00007FF652AA54D0 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:938 blender.exe :0x00007FF652AA7E00 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::run_node_from_task_pool C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:734 blender.exe :0x00007FF6532CF3F0 BLI_task_pool_push C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:485 blender.exe :0x00007FF652AA0F00 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::with_locked_node<<lambda_531922ecfeaca7 C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1711 blender.exe :0x00007FF652AA1270 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::with_locked_node<<lambda_97e59d60c46e6e C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1705 blender.exe :0x00007FF652AA7FE0 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::schedule_initial_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:669 blender.exe :0x00007FF652AA3EA0 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:474 blender.exe :0x00007FF652AA3D10 blender::modifiers::geometry_nodes::evaluate_geometry_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1924 blender.exe :0x00007FF652A63480 compute_geometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1042 blender.exe :0x00007FF652A65E30 modifyGeometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1150 blender.exe :0x00007FF652779B50 modifier_modify_mesh_and_geometry_set C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:893 blender.exe :0x00007FF6527788A0 mesh_calc_modifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1224 blender.exe :0x00007FF6527785A0 mesh_build_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1866 blender.exe :0x00007FF65277AB80 makeDerivedMesh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1996 blender.exe :0x00007FF65279A6B0 BKE_object_handle_data_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:196 blender.exe :0x00007FF65279A440 BKE_object_eval_uber_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:393 blender.exe :0x00007FF652990EF0 blender::deg::`anonymous namespace'::evaluate_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:120 blender.exe :0x00007FF652990EA0 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:132 blender.exe :0x00007FF6532CF510 BLI_task_pool_work_and_wait C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:500 blender.exe :0x00007FF652990A20 blender::deg::deg_evaluate_on_refresh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:401 blender.exe :0x00007FF65265C920 scene_graph_update_tagged C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.c:2584 blender.exe :0x00007FF65258FD90 wm_event_do_notifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:616 blender.exe :0x00007FF6525797E0 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:645 blender.exe :0x00007FF652574FD0 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:566 blender.exe :0x00007FF6533913B8 __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFBD7637020 BaseThreadInitThunk ntdll.dll :0x00007FFBD9622630 RtlUserThreadStart```
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Caused by 8e2c9f2dd3

cc @JacquesLucke

Caused by 8e2c9f2dd3 cc @JacquesLucke
Jacques Lucke self-assigned this 2021-12-17 10:34:05 +01:00

This issue was referenced by 367b484841

This issue was referenced by 367b484841a4d2d2c7a0ad0ec397071804c29210
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94166
No description provided.