Fix T94166: set handle position node crashed after refactor

This was an oversight in rB8e2c9f2dd3118bfdb69ccf0ab2b9f968a854aae4.