source/blender/nodes/geometry/nodes/node_geo_set_curve_handles.cc
@@ -65,7 +65,7 @@ static void set_position_in_component(const GeometryNodeCurveHandleMode mode,
   evaluator.add(position_field);
   evaluator.add(offset_field);
   evaluator.evaluate();
-  const IndexMask selection = evaluator.get_evaluated_as_mask(0);
+  const IndexMask selection = evaluator.get_evaluated_selection_as_mask();
 
   CurveComponent *curve_component = static_cast<CurveComponent *>(&component);
   CurveEval *curve = curve_component->get_for_write();
